2010-12-20 [colin]	3.7.8cvs15

	* src/addrcindex.c
	* src/addrcindex.h
		Removed. Dead code since ages!
	* src/addr_compl.c
	* src/gtk/gtkcmclist.c
	* src/gtk/gtkcmctree.c
	* src/gtk/gtksctree.c
		undefine *_DISABLE_DEPRECATED in the files that
		use deprecated interfaces. Implicit declarations
		can lead to crashes as prototypes are unknown, as
		evidenced by bug #2315.

2010-12-20 [colin]	3.7.8cvs14

	* src/compose.c
		Don't flush events when adding an header entry. This
		can mess up the keypresses in the previous header.
		Instead, make the scroll happen later (doing it on the
		spot without flushing events doesn't work as the new
		requisitions aren't set yet).

2010-12-20 [colin]	3.7.8cvs13

	* src/mainwindow.c
		Don't iconify at start on w32. This un-iconifies in the
		background.

2010-12-20 [colin]	3.7.8cvs12

	* src/common/base64.c
		Fix bug #2331, "Base64 is broken in 3.7.7 and 3.7.8"
		Patch by pochini at shiny.it

2010-12-19 [colin]	3.7.8cvs11

	* src/ldapserver.c
		Better debug.

2010-12-18 [colin]	3.7.8cvs10

	* src/compose.c
		Fix bug #2148, "Attachment content-transfer-encoding 
		incorrectly set when signing emails". The RFC 2045
		states that message/* and multipart/* encoding must
		be either 7-bit, 8-bit or binary.

2010-12-18 [mones]	3.7.8cvs9

	* src/ldaputil.c
		Fix crash when searching or adding a LDAP server

2010-12-17 [colin]	3.7.8cvs8

	* configure.ac
	* src/editldap.c
	* src/ldapquery.c
	* src/ldapserver.c
	* src/ldapupdate.c
	* src/ldaputil.c
	* src/ldaputil.h
		Better error logging. Disable LDAP SSL/TLS on
		Windows, it's crashy/non-worky.

2010-12-17 [colin]	3.7.8cvs7

	* src/folder.c
		Fix bug #2325, "messages remains in folder cache after moving
		from MH to IMAP boxes". Bug introduced in 3.7.6cvs53.

2010-12-17 [colin]	3.7.8cvs6

	* src/addressadd.c
	* src/addressbook.c
	* src/addrindex.c
	* src/ldapquery.c
	* src/ldapquery.h
	* src/ldapserver.c
	* src/ldapserver.h
	* src/ldapupdate.c
	* src/ldaputil.c
	* src/ldaputil.h